controller client list

--- a/.env
+++ b/.env
@@ -1,17 +1,19 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:tc//NJnX7/26EZCMwu41c7LhJFtQl1PdYv3mticSu3I=
+APP_KEY=base64:dibUeZrl/Su1TSZF0F85IkEEPNQKWWQ5Rlrn4h2qyLg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=sqlsrv
+DB_HOST=187.18.101.205
+DB_PORT=11433
+DB_DATABASE=jm
+DB_USERNAME=jmti
+DB_PASSWORD=mygod&1000
+
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
