--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=sqlsrv
 DB_HOST=187.18.101.205
 DB_PORT=11433
-DB_DATABASE=jmti
+DB_DATABASE=jm
 DB_USERNAME=jmti
 DB_PASSWORD=mygod&1000
 
