--- a/.env
+++ b/.env
@@ -8,9 +8,8 @@ LOG_CHANNEL=stack
 
 DB_CONNECTION=sqlsrv
 DB_HOST=187.18.101.205
-DB_PORT=11433
 DB_DATABASE=jmti
-DB_USERNAME=jmti
+DB_USERNAME=sa
 DB_PASSWORD=mygod&1000
 
 
