--- a/.env
+++ b/.env
@@ -12,8 +12,6 @@ DB_DATABASE=jmti
 DB_USERNAME=sa
 DB_PASSWORD=mygod&1000
 
-
-
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
@@ -25,11 +23,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=w8tecnologia.drive@gmail.com
+MAIL_PASSWORD=w8@07102014
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
